--- a/Dockerfile.get-live-fixtures
+++ b/Dockerfile.get-live-fixtures
@@ -2,6 +2,8 @@ FROM public.ecr.aws/docker/library/golang:1.19 as build-image
 WORKDIR /src
 COPY go.mod go.sum ./
 COPY lambda/get-live-fixtures.go ./main.go
+COPY lambda/model ./model
+RUN go get github.com/jackgoodby/aceface/lambda/model
 RUN go build -o lambda-handler
 FROM public.ecr.aws/lambda/provided:al2
 COPY --from=build-image /src/lambda-handler .
