Final repo rejig
Finally got it building how I want it. Lambdas are single lambda directory and dockerfile/sam template adjusted to work.

Also finally got the hang of go.mod file / external libraries.

--- a/Dockerfile.get-live-fixtures
+++ b/Dockerfile.get-live-fixtures
@@ -3,7 +3,7 @@ WORKDIR /src
 COPY go.mod go.sum ./
 COPY lambda/get-live-fixtures.go ./main.go
 COPY lambda/model ./model
-RUN go build -o lambda-handler
+COPY tmp/lambda-handler ./
 FROM public.ecr.aws/lambda/provided:al2
 COPY --from=build-image /src/lambda-handler .
 ENTRYPOINT ./lambda-handler
