change key names in sam templates

--- a/template.yaml
+++ b/template.yaml
@@ -15,7 +15,7 @@ Parameters:
   TABLENAME:
     Type: String
     Description: The DynamoDB table for storing Fixture information.
-    Default: 'aceface-fixture'
+    Default: 'fixture'
 
   REGIONNAME:
     Type: String
@@ -61,14 +61,14 @@ Resources:
     Properties:
       TableName: !Ref TABLENAME
       KeySchema:
-        - AttributeName: ID
+        - AttributeName: id
           KeyType: HASH
-        - AttributeName: SK
+        - AttributeName: sort_key
           KeyType: RANGE
       AttributeDefinitions:
-        - AttributeName: ID
-          AttributeType: N
-        - AttributeName: SK
+        - AttributeName: id
+          AttributeType: S
+        - AttributeName: sort_key
           AttributeType: S
       BillingMode: PAY_PER_REQUEST
       StreamSpecification:
