Stop SAM using prod DB in local

--- a/template.yaml
+++ b/template.yaml
@@ -37,6 +37,9 @@ Resources:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       PackageType: Image
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref FixturesTable
       Architectures:
         - x86_64
       Events:
@@ -47,7 +50,7 @@ Resources:
             Method: GET
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables:
-          TABLE: !Ref TABLENAME
+          TABLE: !Ref FixturesTable
           REGION: !Ref REGIONNAME
           AWSENV: !Ref AWSENVNAME
           DEVENV: !Ref DEVENVNAME
