--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# Frontend app in React with Vite
+node_modules
+
 # SAM
 .aws-sam/*
 tmp/*
