--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+*.local
+
 # Frontend app in React with Vite
 node_modules
 
