--- a/template.yaml
+++ b/template.yaml
@@ -10,6 +10,11 @@ Globals:
   Function:
     Timeout: 5
     MemorySize: 128
+  Api:
+    Cors:
+      AllowMethods: "'GET,PUT,PATCH,POST,OPTIONS'"
+      AllowHeaders: "'X-Forwarded-For, content-type, Access-Control-Allow-Origin'"
+      AllowOrigin: "'*'"
 
 Parameters:
   TABLENAME:
